test/input/invalid/assign_2.js
console.log(2 || (Math.random() /= 2));
